--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/RELNO/cityIO_Forntend#readme",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.2",
     "eslint": "^5.13.0",
     "font-awesome": "^4.7.0",
